--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 	<body>
 		<div id="root"></div>
 		<button id="close-btn">Exit</button>
+		<script type="text/javascript">
+			mxBasePath = 'https://jgraph.github.io/mxgraph/javascript/src/';
+		</script>
 		<script>
 			const { ipcRenderer } = require('electron');
 
